--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             <div class="btn-content">
                                 <span class="btn-icon">📱</span>
                                 <div class="btn-text">
-                                    <small>Get it on</small>
+                                    <small>Coming Soon to</small>
                                     <strong>Google Play</strong>
                                 </div>
                             </div>
