--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                 <div class="footer-links">
                     <p>&copy; 2024 Bible Repair Game. Built with ❤️ for Bible study.</p>
                     <p>
-                        Created by <a href="https://nathaniel-young.com" target="_blank">Nathaniel Young</a> | 
+                        Created by Gene Swain and <a href="https://nathaniel-young.com" target="_blank">Nathaniel Young</a> | 
                         <a href="https://sagaciasoft.com" target="_blank">Sagaciasoft</a>
                     </p>
                 </div>
